<resources>
    <string name="app_name">MovieDB</string>
    <string name="home_menu">Home</string>
    <string name="discover_menu">Discover</string>
    <string name="coming_menu">Coming</string>
    <string name="search_hint">Search for a movie, tv show, person</string>
    <string name="in_theaters_tab">In Theaters</string>
    <string name="on_tv_tab">On TV</string>
    <string name="trending_home">Trending</string>
    <string name="more_home">More</string>
    <string name="cancel">Cancel</string>
    <string name="with_genre">With genres</string>
    <string name="without_genre">Without genres</string>

    <string name="toy_story_lorem" translatable="false">Toy Story 4 is a 2019 American computer-animated comedy film produced by Pixar Animation Studios for Walt Disney Pictures. It is the fourth installment in Pixar\'s Toy Story series and the sequel to Toy Story 3 (2010). It was directed by Josh Cooley (in his feature directorial debut) from a screenplay by Andrew Stanton and Stephany Folsom; the three also conceived the story alongside John Lasseter, Rashida Jones, Will McCormack, Valerie LaPointe, and Martin Hynes.[2] Tom Hanks, Tim Allen, Annie Potts, Joan Cusack, Wallace Shawn, John Ratzenberger, Estelle Harris, Blake Clark, Bonnie Hunt, Jeff Garlin, and Timothy Dalton reprise their character roles from the first three films. They are joined by Tony Hale, Keegan-Michael Key, Jordan Peele, Christina Hendricks, Keanu Reeves, and Ally Maki, who voice the new characters.</string>
    <string name="discover_filter">Filter</string>

    <string name="coming_pager_movie">Movies</string>
    <string name="coming_pager_shows">TV Shows</string>

    <string name="trend_today">Today</string>
    <string name="trend_this_week">This Week</string>

    <string name="gender_woman">Woman</string>
    <string name="gender_man">Man</string>

    <string name="LangTitle">Language</string>
    <string name="LangSummary">Change language for interface</string>
    <string name="dialogTitle">Choose language:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="all_trend_type">All</string>
    <string name="movies_trend_type">Movies</string>
    <string name="tv_shows_trend_type">TV Shows</string>
    <string name="person_trend_type">Person</string>
    <string name="settings">Settings</string>
    <string name="title_activity_movie_detail" translatable="false">MovieDetailActivity</string>
    <string name="detail_overview">OverView</string>
    <string name="detail_top_billed_cast">Top Billed Cast</string>
    <string name="detail_loading_error">Loading Error</string>
    <string name="detail_similar_movies">Similar Movies</string>
    <string name="missing_video">Video is Missing</string>
    <string name="person_biography">Biography</string>
    <string name="person_yesrs_old">years old</string>
    <string name="person_known_for">Known For</string>
    <string name="tv_details">Details</string>
    <string name="tv_see_more">see more...</string>
    <string name="tv_number_od_episodes">Number od Episodes:</string>
    <string name="tv_seasons_number">Seasons Number:</string>
    <string name="tv_last_air_date">Last air date:</string>
</resources>
