<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="androidx.lifecycle.LiveData"/>
        <variable
            name="person"
            type="LiveData&lt;com.example.moviedb.model.person.detail.PersonDetailsResponse>" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/person_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/person_close"
            android:elevation="10dp"/>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/person_scroll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.person.PersonActivity">

                <ImageView
                    android:id="@+id/person_photo"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="@color/textHintColor"
                    loadImg="@{person.profilePath}"/>
                <TextView
                    android:id="@+id/person_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/person_photo"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="Emma Watson"
                    android:text="@{person.name}"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginRight="@dimen/sides_margin"
                    android:layout_marginLeft="@dimen/sides_margin"
                    android:layout_marginTop="@dimen/sides_margin"
                    android:textSize="26sp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                <TextView
                    android:id="@+id/person_years"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:birthday="@{person.birthday}"
                    app:deathday="@{person.deathday}"
                    app:layout_constraintTop_toBottomOf="@id/person_name"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginRight="@dimen/sides_margin"
                    android:layout_marginLeft="@dimen/sides_margin"
                    tools:text="29 yers old"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/biography_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person_biography"
                    app:layout_constraintTop_toBottomOf="@id/person_years"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginRight="@dimen/sides_margin"
                    android:layout_marginLeft="@dimen/sides_margin"
                    android:layout_marginTop="18dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                <TextView
                    android:id="@+id/person_biography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{person.biography}"
                    app:layout_constraintTop_toBottomOf="@id/biography_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:text="@string/toy_story_lorem"
                    android:layout_marginRight="@dimen/sides_margin"
                    android:layout_marginLeft="@dimen/sides_margin"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:id="@+id/known_for_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/person_biography"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/person_known_for"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginRight="@dimen/sides_margin"
                    android:layout_marginLeft="@dimen/sides_margin"
                    android:layout_marginTop="@dimen/sides_margin"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/person_known_for_list"
                    app:layout_constraintTop_toBottomOf="@id/known_for_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/head_card_height"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>